[gd_scene load_steps=26 format=3 uid="uid://6u35wt687ap7"]

[ext_resource type="Script" path="res://WashingMachine/washing_machine.gd" id="1_f2lnk"]
[ext_resource type="Texture2D" uid="uid://curwl4q3f0j5" path="res://Inkscape/spritesheet_WashingMachine_Damaged.png" id="2_m3gpr"]
[ext_resource type="Texture2D" uid="uid://1lmh1aia3h7i" path="res://Inkscape/spritesheet_WashingMachine.png" id="2_tg0kg"]
[ext_resource type="Texture2D" uid="uid://j15gf1r1cfmu" path="res://Inkscape/spritesheet_WashingMachine_Destroyed.png" id="3_kt8ug"]
[ext_resource type="Texture2D" uid="uid://t8wgia8g0ws1" path="res://Inkscape/spritesheet_WashingMachine_Door.png" id="3_vgunn"]
[ext_resource type="Texture2D" uid="uid://clig2damoxdm6" path="res://Inkscape/spritesheet_WashingMachine_LoadedLed.png" id="4_pp4e1"]
[ext_resource type="Texture2D" uid="uid://ctoyjlowe75m" path="res://Inkscape/spritesheet_WashingMachine_LoadedLed_Green.png" id="5_srfgt"]
[ext_resource type="Texture2D" uid="uid://bhxonqyioy1fi" path="res://Inkscape/spritesheet_WashingMachine_LoadedLed_Yellow.png" id="6_fgfig"]
[ext_resource type="Texture2D" uid="uid://cm2d086qwheam" path="res://Inkscape/spritesheet_WashingMachine_LoadedLed_Red.png" id="7_7jyud"]
[ext_resource type="Texture2D" uid="uid://b24w2l3x7hspe" path="res://Inkscape/spritesheet_WashingMachine_ElectricityLed.png" id="9_5u01o"]
[ext_resource type="Texture2D" uid="uid://car60ttjrnsqo" path="res://Inkscape/spritesheet_WashingMachine_Water.png" id="9_xprdq"]
[ext_resource type="Texture2D" uid="uid://b1wjii10pa8we" path="res://Inkscape/spritesheet_WashingMachine_ElectricityLed_Light.png" id="10_qvpdc"]
[ext_resource type="Texture2D" uid="uid://bfpunwifjllc" path="res://light_gradient.tres" id="11_p47eo"]
[ext_resource type="Texture2D" uid="uid://cmrma7y77kxf" path="res://Inkscape/spritesheet_WashingMachine_Heater.png" id="12_iiut0"]
[ext_resource type="AudioStream" uid="uid://d2i7eb3hv4ddo" path="res://BoscaCeoil/washingcycle_fixed.wav" id="15_ctwhp"]
[ext_resource type="AudioStream" uid="uid://t7iifsbhk7pp" path="res://Audacity/WashingMachineDamage.wav" id="16_grm6p"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wkq57"]
size = Vector2(130, 147)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7t853"]
size = Vector2(59, 51)

[sub_resource type="Animation" id="Animation_ie8ku"]
resource_name = "open_close_door"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/Door:rotation")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.349066, -3.14159]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/LaundryStorage:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpritesheetWashingMachineWater:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpritesheetWashingMachineWater:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 64)]
}
tracks/4/type = "method"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0],
"method": &"_set_electric_demand"
}]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Body/LaundryStorage/LaundryStorageInside:rotation")
tracks/5/interp = 4
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("StoppedLight:enabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("WorkingLight:enabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Body/LaundryStorage/LaundryStorageInside:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 20)]
}

[sub_resource type="Animation" id="Animation_jfgk1"]
resource_name = "washing"
length = 15.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/LaundryStorage/LaundryStorageInside:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 3, 5, 6.1, 6.6, 6.9, 9, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 20), Vector2(0, 20), Vector2(20, 0), Vector2(20, 0), Vector2(20, 0), Vector2(-15, 0), Vector2(-20, 0), Vector2(-20, 0), Vector2(25.883, 9.17)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/LaundryStorage:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2, 3, 4.9, 5, 6.1, 6.6, 7.3, 8, 8.1, 9.1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.5708, 1.5708, 7.85398, 7.85398, 10.8856, 10.8856, 9.59931, 15.605, 17.2788, 45.0295]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpritesheetWashingMachineWater:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 8.9),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpritesheetWashingMachineWater:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1, 2, 3.1, 7.7, 8.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(-1, 64), Vector2(-11, 49), Vector2(-1, 38), Vector2(-1, 38), Vector2(-1, 38), Vector2(-1, 65)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/Door:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.6, 2, 2.7, 3.1, 4.5, 5, 7.5, 8.1, 8.6, 9.1, 14.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"values": [{
"args": [1],
"method": &"_set_electric_demand"
}, {
"args": [],
"method": &"_clothes_color_masher"
}, {
"args": [0],
"method": &"_set_electric_demand"
}, {
"args": [],
"method": &"_clothes_color_masher"
}, {
"args": [3],
"method": &"_set_electric_demand"
}, {
"args": [],
"method": &"_clothes_color_masher"
}, {
"args": [2],
"method": &"_set_electric_demand"
}, {
"args": [],
"method": &"_clothes_color_masher"
}, {
"args": [1],
"method": &"_set_electric_demand"
}, {
"args": [],
"method": &"_make_clothes_clean"
}, {
"args": [5],
"method": &"_set_electric_demand"
}, {
"args": [0],
"method": &"_set_electric_demand"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/LaundryStorage/LaundryStorageInside:rotation")
tracks/6/interp = 4
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 2, 3, 4.9, 6.5, 8.5, 9, 9.2, 10),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.5708, 1.5708, 1.5708, 1.5708, 2.25846, 2.66917, 5.23599]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("StoppedLight:enabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 14.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("WorkingLight:enabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 14.8),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("PointLight2D:enabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0, 3.1, 5, 9.1, 15),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, true, false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("SpritesheetWashingMachineHeater:modulate")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0, 3.1, 3.4, 5, 5.4, 9.1, 9.3, 14.4, 14.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Color(0.541176, 0.541176, 0.541176, 1), Color(0.541176, 0.541176, 0.541176, 1), Color(1, 1, 0, 1), Color(1, 1, 0, 1), Color(0.541176, 0.541176, 0.541176, 1), Color(0.541176, 0.541176, 0.541176, 1), Color(0.701961, 0, 0, 1), Color(1, 0, 0, 1), Color(0.541176, 0.541176, 0.541176, 1)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("PointLight2D:color")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(3.1, 9.1, 11.1, 13, 14.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 0, 1), Color(1, 0, 0, 1), Color(1, 0.309804, 0.290196, 1), Color(1, 0.0666667, 0, 1), Color(1, 0.0666667, 0, 0.654902)]
}

[sub_resource type="Animation" id="Animation_veodj"]
resource_name = "washing"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/LaundryStorage:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 12.5664]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/LaundryStorage:position")
tracks/1/interp = 0
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.5, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 23), Vector2(2, 25), Vector2(0, 21), Vector2(-2, 23)]
}

[sub_resource type="Animation" id="Animation_7m5fu"]
resource_name = "washing_stop"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Body/LaundryStorage/LaundryStorageInside:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 20)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Body/LaundryStorage:rotation")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SpritesheetWashingMachineWater:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SpritesheetWashingMachineWater:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-1, 64)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Body/Door:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "method"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath(".")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0],
"method": &"_set_electric_demand"
}]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Body/LaundryStorage/LaundryStorageInside:rotation")
tracks/6/interp = 4
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("StoppedLight:enabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("WorkingLight:enabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("SpritesheetWashingMachineHeater:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.541176, 0.541176, 0.541176, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("PointLight2D:enabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xtwnd"]
_data = {
"open_close_door": SubResource("Animation_ie8ku"),
"washing": SubResource("Animation_jfgk1"),
"washing_prototype": SubResource("Animation_veodj"),
"washing_stop": SubResource("Animation_7m5fu")
}

[sub_resource type="Gradient" id="Gradient_vk0xs"]
colors = PackedColorArray(0.85, 0.566667, 0, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_qajmr"]
gradient = SubResource("Gradient_vk0xs")
fill = 1
fill_from = Vector2(0.509009, 0.472973)
fill_to = Vector2(1, 0.472973)

[node name="WashingMachine" type="Node2D"]
script = ExtResource("1_f2lnk")

[node name="Body" type="Node2D" parent="."]

[node name="BodyDamaged" type="Sprite2D" parent="Body"]
visible = false
z_index = 50
texture = ExtResource("2_m3gpr")

[node name="BodyDestroyed" type="Sprite2D" parent="Body"]
visible = false
z_index = 50
texture = ExtResource("3_kt8ug")

[node name="Body" type="Sprite2D" parent="Body"]
z_index = 50
texture = ExtResource("2_tg0kg")

[node name="Door" type="Sprite2D" parent="Body"]
z_index = 100
position = Vector2(-37, 27)
texture = ExtResource("3_vgunn")
offset = Vector2(37, 0)

[node name="LoadedLed" type="Sprite2D" parent="Body"]
z_index = 60
position = Vector2(52, 25)
texture = ExtResource("4_pp4e1")

[node name="SpritesheetWashingMachineLoadedLedGreen" type="Sprite2D" parent="Body/LoadedLed"]
position = Vector2(0, 32)
texture = ExtResource("5_srfgt")

[node name="SpritesheetWashingMachineLoadedLedGreen2" type="Sprite2D" parent="Body/LoadedLed"]
position = Vector2(0, 25)
texture = ExtResource("5_srfgt")

[node name="SpritesheetWashingMachineLoadedLedGreen3" type="Sprite2D" parent="Body/LoadedLed"]
position = Vector2(0, 18)
texture = ExtResource("5_srfgt")

[node name="SpritesheetWashingMachineLoadedLedGreen4" type="Sprite2D" parent="Body/LoadedLed"]
position = Vector2(0, 11)
texture = ExtResource("5_srfgt")

[node name="SpritesheetWashingMachineLoadedLedYellow" type="Sprite2D" parent="Body/LoadedLed"]
position = Vector2(0, 4)
texture = ExtResource("6_fgfig")

[node name="SpritesheetWashingMachineLoadedLedYellow2" type="Sprite2D" parent="Body/LoadedLed"]
position = Vector2(0, -3)
texture = ExtResource("6_fgfig")

[node name="SpritesheetWashingMachineLoadedLedYellow3" type="Sprite2D" parent="Body/LoadedLed"]
position = Vector2(0, -10)
texture = ExtResource("6_fgfig")

[node name="SpritesheetWashingMachineLoadedLedRed" type="Sprite2D" parent="Body/LoadedLed"]
position = Vector2(0, -17)
texture = ExtResource("7_7jyud")

[node name="SpritesheetWashingMachineLoadedLedRed2" type="Sprite2D" parent="Body/LoadedLed"]
position = Vector2(0, -24)
texture = ExtResource("7_7jyud")

[node name="SpritesheetWashingMachineLoadedLedRed3" type="Sprite2D" parent="Body/LoadedLed"]
position = Vector2(0, -31)
texture = ExtResource("7_7jyud")

[node name="LaundryStorage" type="Node2D" parent="Body"]
position = Vector2(0, 23)

[node name="LaundryStorageInside" type="Node2D" parent="Body/LaundryStorage"]
position = Vector2(0, 20)
scale = Vector2(1, 0.5)

[node name="ElectricDemandLed" type="Sprite2D" parent="Body"]
z_index = 80
position = Vector2(-50, 26)
texture = ExtResource("9_5u01o")

[node name="SpritesheetWashingMachineElectricityLedLight" type="Sprite2D" parent="Body/ElectricDemandLed"]
position = Vector2(0, 15)
texture = ExtResource("10_qvpdc")

[node name="SpritesheetWashingMachineElectricityLedLight2" type="Sprite2D" parent="Body/ElectricDemandLed"]
position = Vector2(0, 8)
texture = ExtResource("10_qvpdc")

[node name="SpritesheetWashingMachineElectricityLedLight3" type="Sprite2D" parent="Body/ElectricDemandLed"]
position = Vector2(0, 1)
texture = ExtResource("10_qvpdc")

[node name="SpritesheetWashingMachineElectricityLedLight4" type="Sprite2D" parent="Body/ElectricDemandLed"]
position = Vector2(0, -6)
texture = ExtResource("10_qvpdc")

[node name="SpritesheetWashingMachineElectricityLedLight5" type="Sprite2D" parent="Body/ElectricDemandLed"]
position = Vector2(0, -13)
texture = ExtResource("10_qvpdc")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 17

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2(2, -5.5)
shape = SubResource("RectangleShape2D_wkq57")

[node name="Interact" type="Area2D" parent="."]
collision_layer = 67
collision_mask = 66

[node name="CollisionShape2D" type="CollisionShape2D" parent="Interact"]
visible = false
position = Vector2(0.5, 22.5)
shape = SubResource("RectangleShape2D_7t853")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xtwnd")
}

[node name="WorkingLight" type="PointLight2D" parent="."]
z_index = 1000
position = Vector2(-41, -54)
scale = Vector2(0.964844, 1)
enabled = false
shadow_enabled = true
texture = SubResource("GradientTexture2D_qajmr")
texture_scale = 2.0

[node name="StoppedLight" type="PointLight2D" parent="."]
z_index = 1000
position = Vector2(44, -54)
scale = Vector2(0.964844, 1)
shadow_enabled = true
texture = SubResource("GradientTexture2D_qajmr")
texture_scale = 2.0

[node name="SpritesheetWashingMachineWater" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.784314)
z_index = 1
position = Vector2(-1, 64)
texture = ExtResource("9_xprdq")

[node name="MachineBackground" type="Sprite2D" parent="."]
position = Vector2(2, 27)
scale = Vector2(5.67647, 0.934211)
texture = ExtResource("4_pp4e1")

[node name="PointLight2D" type="PointLight2D" parent="."]
position = Vector2(-3, 12)
enabled = false
color = Color(1, 1, 0, 1)
texture = ExtResource("11_p47eo")

[node name="SpritesheetWashingMachineHeater" type="Sprite2D" parent="."]
modulate = Color(0.541176, 0.541176, 0.541176, 1)
position = Vector2(-6, 11)
texture = ExtResource("12_iiut0")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("15_ctwhp")
volume_db = -5.0
attenuation = 15.0
bus = &"SFX"

[node name="DamagePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("16_grm6p")

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
